# DiscoSeqSampler

./: .editorconfig  .gitignore  .mypy.ini  .pre-commit-config.yaml  DEVELOPMENT.md  MANIFEST.in  Makefile  README.md  install.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
discoseqsampler/: __init__.py  cli.py
discoseqsampler/core/: __init__.py  coordinator.py  sampler.py
discoseqsampler/samplers/: __init__.py  bucketed.py  sequential.py
discoseqsampler/tests/: test_config.py  test_sampler.py
discoseqsampler/utils/: __init__.py  config.py
discoss/: __init__.py
discoss/sampler/: __init__.py  bucketing.py
examples/: 01-audio-image-video-cuts.ipynb  01-image-video-cuts.ipynb  README.md  advanced_usage.py  basic_usage.py  distributed_training.py
tests/: conftest.py  test_init.py  test_sampler.py  test_sampler_dynamic_bucketing.py  test_sampler_simple.py
