[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DiscoSeqSampler"
version = "0.1.0"
description = "Distributed Coordinated Sequenced Sampler for multi-modality data using Lhotse"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Feiteng", email = "lifeiteng0422@gmail.com"},
]
keywords = ["speech", "data-loading", "distributed", "sampling", "lhotse"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "lhotse>=1.17.0",
    "torch>=1.12.0",
    "numpy>=1.21.0",
    "pydantic>=1.8.0",
    "click>=8.0.0",
    "tqdm>=4.64.0",
    "soundfile>=0.10.0",
    "librosa>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
    "pre-commit>=2.20.0",
]

[project.urls]
Homepage = "https://github.com/feiteng/DiscoSeqSampler"
Repository = "https://github.com/feiteng/DiscoSeqSampler"
Issues = "https://github.com/feiteng/DiscoSeqSampler/issues"

[project.scripts]
discoseq = "discoseqsampler.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["discoseqsampler*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
